force-app/main/default/objects/Grant__c/fields/ST_Mississippi_Dept_of_Human_Services__c.field-meta.xml
<CustomField>
    <fullName>ST_Mississippi_Dept_of_Human_Services__c</fullName>
    <label>ST: Mississippi Dept. of Human Services</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>