force-app/main/default/objects/Grant__c/fields/ST_Naples_Children_Education__c.field-meta.xml
<CustomField>
    <fullName>ST_Naples_Children_Education__c</fullName>
    <label>ST: Naples Children &amp; Education</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>