force-app/main/default/objects/Grant__c/fields/ST_Niagara_Cares__c.field-meta.xml
<CustomField>
    <fullName>ST_Niagara_Cares__c</fullName>
    <label>ST: Niagara Cares</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>