force-app/main/default/objects/Grant__c/fields/ST_Niagara_Cares_Hurricane_Relief__c.field-meta.xml
<CustomField>
    <fullName>ST_Niagara_Cares_Hurricane_Relief__c</fullName>
    <label>ST: Niagara Cares Hurricane Relief</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>