force-app/main/default/objects/Grant__c/fields/ST_Office_of_Juvenile_Justice__c.field-meta.xml
<CustomField>
    <fullName>ST_Office_of_Juvenile_Justice__c</fullName>
    <label>ST: Office of Juvenile Justice</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>