force-app/main/default/objects/Grant__c/fields/ST_Ohio_Office_of_the_Attorney_General__c.field-meta.xml
<CustomField>
    <fullName>ST_Ohio_Office_of_the_Attorney_General__c</fullName>
    <label>ST: Ohio Office of the Attorney General</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>