force-app/main/default/objects/Grant__c/fields/ST_Prince_William_HIDTA__c.field-meta.xml
<CustomField>
    <fullName>ST_Prince_William_HIDTA__c</fullName>
    <label>ST: Prince William HIDTA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>