force-app/main/default/objects/Grant__c/fields/ST_Private_Grants__c.field-meta.xml
<CustomField>
    <fullName>ST_Private_Grants__c</fullName>
    <label>ST: Private Grants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>