force-app/main/default/objects/Grant__c/fields/ST_Sherman_Fairchild_Fdn__c.field-meta.xml
<CustomField>
    <fullName>ST_Sherman_Fairchild_Fdn__c</fullName>
    <label>ST: Sherman Fairchild Fdn</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>