force-app/main/default/objects/Grant__c/fields/ST_Sun_Trust_Bank__c.field-meta.xml
<CustomField>
    <fullName>ST_Sun_Trust_Bank__c</fullName>
    <label>ST: Sun Trust Bank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>