force-app/main/default/objects/Grant__c/fields/ST_Toledo_Community_Fdn__c.field-meta.xml
<CustomField>
    <fullName>ST_Toledo_Community_Fdn__c</fullName>
    <label>ST: Toledo Community Fdn</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>