force-app/main/default/objects/Grant__c/fields/ST_Under_Armour__c.field-meta.xml
<CustomField>
    <fullName>ST_Under_Armour__c</fullName>
    <label>ST: Under Armour</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>