force-app/main/default/objects/Grant__c/fields/ST_United_Health_Care__c.field-meta.xml
<CustomField>
    <fullName>ST_United_Health_Care__c</fullName>
    <label>ST: United Health Care</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>