force-app/main/default/objects/Grant__c/fields/ST_US_Department_of_State__c.field-meta.xml
<CustomField>
    <fullName>ST_US_Department_of_State__c</fullName>
    <label>ST: US Department of State</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>