force-app/main/default/objects/Grant__c/fields/ST_Washington_Baltimore_HIDTA__c.field-meta.xml
<CustomField>
    <fullName>ST_Washington_Baltimore_HIDTA__c</fullName>
    <label>ST: Washington/Baltimore HIDTA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>