force-app/main/default/objects/Grant__c/fields/ST_Wisconsin_Department_of_Justice__c.field-meta.xml
<CustomField>
    <fullName>ST_Wisconsin_Department_of_Justice__c</fullName>
    <label>ST: Wisconsin Department of Justice</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>