force-app/main/default/objects/Grant__c/fields/ST_YDP_Growth_Fund__c.field-meta.xml
<CustomField>
    <fullName>ST_YDP_Growth_Fund__c</fullName>
    <label>ST: YDP Growth Fund</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>