force-app/main/default/objects/Grant__c/fields/Sub_Grant_Number__c.field-meta.xml
<CustomField>
    <fullName>Sub_Grant_Number__c</fullName>
    <label>Sub-Grant Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>