force-app/main/default/objects/Grant__c/fields/Submitted_Balance__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Balance__c</fullName>
    <formula
  >Total_Item_Budget__c - Reimbursement_Requested_Benefits__c - Reimbursement_Requested_Salary__c - Reimbursement_Requested_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>