force-app/main/default/objects/Grant__c/fields/Successes_Challenges_Experiencesd__c.field-meta.xml
<CustomField>
    <fullName>Successes_Challenges_Experiencesd__c</fullName>
    <label>Successes/Challenges Experiencesd</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>