force-app/main/default/objects/Grant__c/fields/Summer_Camp__c.field-meta.xml
<CustomField>
    <fullName>Summer_Camp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summer Camp</label>
    <type>Checkbox</type>
</CustomField>