force-app/main/default/objects/Grant__c/fields/Total_Awarded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Awarded_Amount__c</fullName>
    <inlineHelpText>Currency Field</inlineHelpText>
    <label>Total Awarded Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>