force-app/main/default/objects/Grant__c/fields/Total_Benefits_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Total_Benefits_Reimbursed__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Budget Item: Total Approved Benefits</inlineHelpText>
    <label>Total Benefits Reimbursed</label>
    <summarizedField>Budget_Item__c.Total_Approved_Benefits__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>