force-app/main/default/objects/Grant__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Budget Item: Item Budget where Record Type = Expense (not used by BBBSA or NPAL)</inlineHelpText>
    <label>Total Expenses</label>
    <summarizedField>Budget_Item__c.Item_Budget__c</summarizedField>
    <summaryFilterItems>
        <field>Budget_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Expense</value>
    </summaryFilterItems>
    <summaryForeignKey>Budget_Item__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>