force-app/main/default/objects/Grant__c/fields/Total_Expenses_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Reimbursed__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Budget Item: Total Approved Amount where Record Type = Expense</inlineHelpText>
    <label>Total Expenses Reimbursed</label>
    <summarizedField>Budget_Item__c.Total_Approved_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Budget_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Expense</value>
    </summaryFilterItems>
    <summaryForeignKey>Budget_Item__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>