force-app/main/default/objects/Grant__c/fields/Total_Fringe_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Total_Fringe_Benefits__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Budget Item: Fringe Benefits</inlineHelpText>
    <label>Total Fringe Benefits</label>
    <summarizedField>Budget_Item__c.Fringe_Benefits__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>