force-app/main/default/objects/Grant__c/fields/Total_Indirect_Rate_Budgeted__c.field-meta.xml
<CustomField>
    <fullName>Total_Indirect_Rate_Budgeted__c</fullName>
    <label>Total Indirect Rate Budgeted</label>
    <summarizedField>Budget_Item__c.Indirect_Costs_Budget__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>