force-app/main/default/objects/Grant__c/fields/Total_Item_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Balance__c</fullName>
    <formula>Total_Item_Budget__c - Reimbursement_Approved_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Total_Item_Budget__c - Reimbursement_Approved_Amount__c</inlineHelpText>
    <label>Total Item Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>