force-app/main/default/objects/Grant__c/fields/Total_Item_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Item_Budget__c</fullName>
    <inlineHelpText>Roll-Up Summary of Budget Item: Item Budget</inlineHelpText>
    <label>Total Item Budget</label>
    <summarizedField>Budget_Item__c.Item_Budget__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>