force-app/main/default/objects/Grant__c/fields/Total_New_Item_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_New_Item_Budget__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Budget Item: New Item Budget</inlineHelpText>
    <label>Total New Item Budget</label>
    <summarizedField>Budget_Item__c.New_Item_Budget__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>