force-app/main/default/objects/Grant__c/fields/Total_Pending_Requests__c.field-meta.xml
<CustomField>
    <fullName>Total_Pending_Requests__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Reimbursement Requests: Total Requested where Status = Pending First Approval, Pending Second Approval, Pending Third Approval, Pending Fourth Approval, or Pending Final Approval</inlineHelpText>
    <label>Total Pending Requests ($)</label>
    <summarizedField
  >Reimbursement_Request__c.Total_Requested__c</summarizedField>
    <summaryFilterItems>
        <field>Reimbursement_Request__c.Status__c</field>
        <operation>equals</operation>
        <value
    >Pending First Approval, Pending Second Approval, Pending Third Approval, Pending Fourth Approval, Pending Final Approval</value>
    </summaryFilterItems>
    <summaryForeignKey>Reimbursement_Request__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>