force-app/main/default/objects/Grant__c/fields/Total_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Requested_Amount__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Budget Item: Total Requested Amount</inlineHelpText>
    <label>Total Requested Amount</label>
    <summarizedField>Budget_Item__c.Total_Requested_Amount__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>