force-app/main/default/objects/Grant__c/fields/Total_Salary_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary_Reimbursed__c</fullName>
    <inlineHelpText
  >Roll-Up Summary of Budget Item: Total Approved Salary</inlineHelpText>
    <label>Total Salary Reimbursed</label>
    <summarizedField>Budget_Item__c.Total_Approved_Salary__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>