force-app/main/default/objects/Grant__c/fields/Total_Wages_Budgeted__c.field-meta.xml
<CustomField>
    <fullName>Total_Wages_Budgeted__c</fullName>
    <label>Total Wages Budgeted</label>
    <summarizedField>Budget_Item__c.Wages__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>