force-app/main/default/objects/Grant__c/fields/Unmet_Needs_Description__c.field-meta.xml
<CustomField>
    <fullName>Unmet_Needs_Description__c</fullName>
    <label>Unmet Needs Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>