force-app/main/default/objects/Grant__c/fields/Use_Indirect_Rate__c.field-meta.xml
<CustomField>
    <fullName>Use_Indirect_Rate__c</fullName>
    <label>Use Indirect Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>