force-app/main/default/objects/Grant__c/fields/Youth_Development_Park__c.field-meta.xml
<CustomField>
    <fullName>Youth_Development_Park__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Youth Development Park</label>
    <type>Checkbox</type>
</CustomField>