force-app/main/default/objects/Grant__c/fields/Youth_in_Rural_Communities__c.field-meta.xml
<CustomField>
    <fullName>Youth_in_Rural_Communities__c</fullName>
    <label>Youth in Rural Communities</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>