force-app/main/default/objects/Grant__c/fields/Youth_Served_Text__c.field-meta.xml
<CustomField>
    <fullName>Youth_Served_Text__c</fullName>
    <formula>TEXT(Youth_Served__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Youth Served Text</label>
    <type>Text</type>
</CustomField>