force-app/main/default/objects/Grant__c/fields/Youth_with_Disabilities__c.field-meta.xml
<CustomField>
    <fullName>Youth_with_Disabilities__c</fullName>
    <label>Youth with Disabilities</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>