force-app/main/default/objects/Grant__c/recordTypes/Sub_Grant.recordType-meta.xml
<RecordType>
    <fullName>Sub_Grant</fullName>
    <active>true</active>
    <label>Sub-Grant</label>
</RecordType>