force-app/main/default/objects/Grant__c/listViews/AllSubGrants.listView-meta.xml
<ListView>
    <fullName>AllSubGrants</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>National_Grant__c</columns>
    <columns>Grant_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Grant__c.Sub_Grant</value>
    </filters>
    <label>All Sub-Grants</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>