force-app/main/default/objects/Grant__c/listViews/NPALGrants.listView-meta.xml
<ListView>
    <fullName>NPALGrants</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Grant_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>NPAL</value>
    </filters>
    <label>NPAL Grants</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>