force-app/main/default/objects/Grant__c/listViews/Ripken_SubGrants.listView-meta.xml
<ListView>
    <fullName>Ripken_SubGrants</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>National_Grant__c</columns>
    <columns>Grant_Status__c</columns>
    <columns>Amount__c</columns>
    <columns>Balance__c</columns>
    <columns>Grant_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Grant__c.Sub_Grant</value>
    </filters>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>Ripken</value>
    </filters>
    <label>Ripken Sub-Grants</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>